// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|PageBlockForm Code type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="code name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="code"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="code-content"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Code Snippet
      </label>
      <textarea
        id="code-content"
        onChange={[Function]}
        placeholder="
    <button id=\\"my-button\\">
        Click Me
    </button>
    <div class=\\"hello-div\\">
        Hello
    </div>
    "
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm Embed type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="embed name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="embed"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="embed-content"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Embed Code
      </label>
      <textarea
        id="embed-content"
        onChange={[Function]}
        placeholder="
    <iframe
        width=\\"560\\"
        height=\\"315\\"
        src=\\"https://www.youtube.com/embed/avideo\\"
        frameborder=\\"0\\"
        allowfullscreen
    />
    "
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm Image type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c5 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  line-height: 24px;
  font-size: 18px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 60px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="image"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <label
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          File Name
        </label>
        <label
          htmlFor="fileUpload"
          style={
            Object {
              "cursor": "pointer",
              "display": "block",
              "fontSize": 18,
              "lineHeight": "24px",
              "opacity": 1,
              "paddingBottom": 30,
              "width": "calc(100% - 70px)",
            }
          }
        >
          Please select image(s) or Drag and Drop it here
        </label>
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <label
            htmlFor="fileUpload"
            style={
              Object {
                "position": "relative",
                "top": 10,
              }
            }
          >
            <div
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": 0,
                  "margin": "0",
                  "minHeight": "48px",
                  "opacity": 1,
                  "outline": "none",
                  "padding": "0",
                  "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                }
              }
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "60px",
                    "width": "60px",
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
                />
              </svg>
            </div>
          </label>
        </div>
        <input
          accept=".png, .jpg, .jpeg, .gif"
          aria-hidden={true}
          disabled={false}
          id="fileUpload"
          multiple={true}
          name="inputImages"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="file"
        />
      </div>
      <label
        htmlFor="fileUpload"
        id="dropZone-schema-ui"
        onDrop={[Function]}
        style={
          Object {
            "alignItems": "center",
            "background": "#000",
            "border": "2px dashed #2F2F36",
            "borderRadius": 10,
            "cursor": "copy",
            "display": "flex",
            "height": "calc(100% - 10px)",
            "justifyContent": "center",
            "left": 0,
            "lineHeight": "50px",
            "opacity": 0,
            "position": "absolute",
            "textAlign": "center",
            "top": 5,
            "transition": "opacity 200ms ease-in-out",
            "visibility": "hidden",
            "width": "100%",
          }
        }
      >
        Drop here
      </label>
    </div>
    <label
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Current files
    </label>
    <div
      className="c6"
    >
      <span
        className="c7"
      >
        <div
          className="c8"
        >
          <span
            className="c9"
          >
            imageName.png
          </span>
        </div>
        <svg
          id="removeImage-0"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fill": "#FFF",
              "height": 30,
              "marginLeft": 20,
              "minWidth": 30,
              "width": 30,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm Markdown type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="markdown name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="markdown"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="markdown-content"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Markdown Text
      </label>
      <textarea
        id="markdown-content"
        onChange={[Function]}
        placeholder="
    # My Cool Title

    ## Awesome subtitle

    Description **bold**
    "
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm Multiple images type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c5 {
  position: relative;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: move;
  touch-action: none;
}

.c4 {
  position: relative;
}

.c6 {
  line-height: 24px;
  font-size: 18px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="image"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <label
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          File Name
        </label>
        <label
          htmlFor="fileUpload"
          style={
            Object {
              "cursor": "pointer",
              "display": "block",
              "fontSize": 18,
              "lineHeight": "24px",
              "opacity": 1,
              "paddingBottom": 30,
              "width": "calc(100% - 70px)",
            }
          }
        >
          Please select image(s) or Drag and Drop it here
        </label>
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <label
            htmlFor="fileUpload"
            style={
              Object {
                "position": "relative",
                "top": 10,
              }
            }
          >
            <div
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": 0,
                  "margin": "0",
                  "minHeight": "48px",
                  "opacity": 1,
                  "outline": "none",
                  "padding": "0",
                  "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                }
              }
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "60px",
                    "width": "60px",
                  }
                }
                viewBox="0 0 60 60"
              >
                <path
                  d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
                />
              </svg>
            </div>
          </label>
        </div>
        <input
          accept=".png, .jpg, .jpeg, .gif"
          aria-hidden={true}
          disabled={false}
          id="fileUpload"
          multiple={true}
          name="inputImages"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="file"
        />
      </div>
      <label
        htmlFor="fileUpload"
        id="dropZone-schema-ui"
        onDrop={[Function]}
        style={
          Object {
            "alignItems": "center",
            "background": "#000",
            "border": "2px dashed #2F2F36",
            "borderRadius": 10,
            "cursor": "copy",
            "display": "flex",
            "height": "calc(100% - 10px)",
            "justifyContent": "center",
            "left": 0,
            "lineHeight": "50px",
            "opacity": 0,
            "position": "absolute",
            "textAlign": "center",
            "top": 5,
            "transition": "opacity 200ms ease-in-out",
            "visibility": "hidden",
            "width": "100%",
          }
        }
      >
        Drop here
      </label>
    </div>
    <label
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Current files
    </label>
    <span>
      <div
        className="c6"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "space-between",
              "opacity": 1,
              "position": "relative",
              "transform": "translate3d(0, 0, 0)",
              "width": "100%",
              "zIndex": NaN,
            }
          }
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "60px",
                    "marginRight": 20,
                    "width": 10,
                  }
                }
                viewBox="0 0 10 60"
              >
                <path
                  d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <span
              className="c9"
            >
              imageName.png
            </span>
          </div>
          <svg
            id="removeImage-0"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fill": "#FFF",
                "height": 30,
                "marginLeft": 20,
                "minWidth": 30,
                "width": 30,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "space-between",
              "opacity": 1,
              "position": "relative",
              "transform": "translate3d(0, 0, 0)",
              "width": "100%",
              "zIndex": NaN,
            }
          }
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "60px",
                    "marginRight": 20,
                    "width": 10,
                  }
                }
                viewBox="0 0 10 60"
              >
                <path
                  d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <span
              className="c9"
            >
              imageName.png
            </span>
          </div>
          <svg
            id="removeImage-1"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fill": "#FFF",
                "height": 30,
                "marginLeft": 20,
                "minWidth": 30,
                "width": 30,
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm None type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value=""
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="none"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Select type
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|PageBlockForm Text type 1`] = `
.c0 {
  position: relative;
}

.c1 {
  margin-top: 25px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  position: relative;
  font-size: 18px;
}

.c2 label {
  margin-bottom: 2px;
}

.c3 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        placeholder="Name"
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="text name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <div
          className="c1"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "30px",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      id="fieldProjectStatusLabel"
      style={
        Object {
          "border": "none",
          "borderTop": "2px solid #2F2F36",
          "color": "#71737e",
          "display": "block",
          "fontSize": "14px",
          "outline": "none",
          "paddingTop": "8px",
          "width": "100%",
        }
      }
    >
      Type
    </label>
    <input
      id="type"
      name="type"
      type="hidden"
      value="text"
    />
    <div
      className="c3"
    >
      <svg
        style={
          Object {
            "fill": "#FFF",
            "height": "30px",
            "width": "30px",
          }
        }
        viewBox="0 0 30 30"
      >
        <path
          d="M15.117 18L9 12h12z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      style={
        Object {
          "color": "#FFF",
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        id="fieldBlockType"
        style={
          Object {
            "cursor": "pointer",
            "display": "flex",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
        </div>
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "backgroundColor": "#1d1d20",
              "display": "none",
              "flexDirection": "column",
              "left": "0",
              "maxHeight": "184px",
              "overflowY": "hidden",
              "position": "absolute",
              "top": "calc(100% + 5px)",
              "width": "100%",
              "zIndex": 2,
            }
          }
        >
          <div
            id="select-item-0"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "1px solid  #2F2F36",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Image Upload
          </div>
          <div
            id="select-item-1"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Markdown
          </div>
          <div
            id="select-item-2"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#000",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Text
          </div>
          <div
            id="select-item-3"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Embed
          </div>
          <div
            id="select-item-4"
            onClick={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "border": "1px solid  #2F2F36",
                "borderTop": "none",
                "color": "#71737e",
                "cursor": "pointer",
                "overflow": "hidden",
                "padding": "20px 10px",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
              }
            }
          >
            Code Snippet
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="text-content"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Text
      </label>
      <textarea
        id="text-content"
        onChange={[Function]}
        placeholder="Example text"
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "lineHeight": "24px",
            "outline": "none",
            "padding": "0",
            "resize": "none",
          }
        }
      />
      <textarea
        aria-hidden={true}
        readOnly={true}
        style={
          Object {
            "background": "#000",
            "border": "none",
            "color": "#FFF",
            "fontSize": "18px",
            "height": 0,
            "left": 0,
            "lineHeight": "24px",
            "outline": "none",
            "overflow": "hidden",
            "padding": "0",
            "position": "absolute",
            "resize": "none",
            "top": 0,
            "visibility": "hidden",
          }
        }
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      />
    </div>
  </div>
</div>
`;
